RESOLVED FIXED57739
REGRESSION: Reproducible crash in Snow Leopard when trying to show the Dictionary panel or application
https://bugs.webkit.org/show_bug.cgi?id=57739
Summary REGRESSION: Reproducible crash in Snow Leopard when trying to show the Dictio...
mitz
Reported 2011-04-03 19:00:06 PDT
REGRESSION: Reproducible crash in Snow Leopard when trying to show the Dictionary panel or application
Attachments
Do not use options dictionary on Snow Leopard (3.72 KB, patch)
2011-04-03 19:09 PDT, mitz
mjs: review+
mitz
Comment 1 2011-04-03 19:01:05 PDT
mitz
Comment 2 2011-04-03 19:09:46 PDT
Created attachment 88027 [details] Do not use options dictionary on Snow Leopard
Maciej Stachowiak
Comment 3 2011-04-03 19:12:27 PDT
Comment on attachment 88027 [details] Do not use options dictionary on Snow Leopard r=me
mitz
Comment 4 2011-04-03 19:14:28 PDT
Early Warning System Bot
Comment 5 2011-04-03 19:18:56 PDT
mitz
Comment 6 2011-04-03 19:22:12 PDT
Build Bot
Comment 7 2011-04-03 19:48:18 PDT
Note You need to log in before you can comment on or make changes to this bug.