<rdar://problem/9227839> REGRESSION: Reproducible crash in Snow Leopard when trying to show the Dictionary panel or application https://bugs.webkit.org/show_bug.cgi?id=57739

Reviewed by Maciej Stachowiak.

* Shared/DictionaryPopupInfo.cpp:
(WebKit::DictionaryPopupInfo::encode): Do not encode the options dictionary on Snow Leopard.
(WebKit::DictionaryPopupInfo::decode): Do not decode the options dictionary on Snow Leopard.
* Shared/DictionaryPopupInfo.h: Removed the options member variable on Snow Leopard.
* Shared/Plugins/PluginQuirks.h:
* WebProcess/WebPage/mac/WebPageMac.mm:
(WebKit::WebPage::performDictionaryLookupForRange): Do not set the options member variable on
Snow Leopard.



Canonical link: https://commits.webkit.org/72583@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82796 268f45cc-cd09-0410-ab3c-d52691b4dbfc